--- a/public.k33g/index.html
+++ b/public.k33g/index.html
@@ -16,33 +16,27 @@
 
     });
 
-    //mettre les défauts
+    //think to default values
     window.Fight = Backbone.Model.extend({
         urlRoot:"/fights" ,
 
-        setRounds : function(rounds) {
-            //var currentFight = this;
-            this.set({rounds:rounds.toJSON()})
-
-            rounds.on("change", function(){ this.setRounds(rounds); console.log("****");}, this)
-
-        }
-    });
-
-    window.Round = Backbone.Model.extend({
-        urlRoot:"/rounds",
-        //http://backbonejs.org/#FAQ-this
-        setFirstOpponent:function(opponent){
-            //var currentRound = this;
-            this.set({opponentOne:opponent.toJSON()})
-            opponent.on("change", function(){ this.setFirstOpponent(opponent)}, this)
+        defaults : {
+            opponentOneScore : 0,
+            opponentTwoScore : 0
         },
 
-        setSecondOpponent:function(opponent){
+        setOpponentOne:function(opponent){
+            //var currentRound = this;
+            this.set({opponentOne:opponent.toJSON()})
+            opponent.on("change", function(){ this.setOpponentOne(opponent)}, this)
+        },
+
+        setOpponentTwo:function(opponent){
             //var currentRound = this;
             this.set({opponentTwo:opponent.toJSON()})
-            opponent.on("change", function(){ this.setSecondOpponent(opponent)}, this)
+            opponent.on("change", function(){ this.setOpponentTwo(opponent)}, this)
         }
+
     });
 
     window.Players = Backbone.Collection.extend({
@@ -55,38 +49,21 @@
         model : Fight
     });
 
-    window.Rounds = Backbone.Collection.extend({
-        url :"/rounds",
-        model : Round
-    });
 
     var k33g = new Player({firstName:"Philippe", lastName:"Charrière", framework:"Backbone"});
     var sebmade = new Player({firstName:"Sébastien", lastName:"Letélié", framework:"Angular"});
     var tchak13 = new Player({firstName:"Paul", lastName:"Chavar", framework:"Ember"});
-    //defaults ???
 
-    var r1 = new Round({
-        number:1,
-        opponentOneScore:0,
-        opponentTwoScore:0
-    });
 
-    var r2 = new Round({
-        number:1,
-        opponentOneScore:0,
-        opponentTwoScore:0
-    });
 
-    var rounds = new Rounds([r1,r2])
 
     var fightOne = new Fight({name:"FIGHTONE"});
 
-    r1.setFirstOpponent(sebmade)
-    r1.setSecondOpponent(k33g)
-    r2.setFirstOpponent(k33g)
-    r2.setSecondOpponent(sebmade)
+    fightOne.setOpponentOne(sebmade)
+    fightOne.setOpponentTwo(k33g)
 
-    fightOne.setRounds(rounds)
+
+
 
 
 
