--- a/public.sebmade/app/index.html
+++ b/public.sebmade/app/index.html
@@ -36,6 +36,7 @@
     <!-- build:js scripts/scripts.js -->
     <script src="scripts/app.js"></script>
     <script src="scripts/controllers/main.js"></script>
+    <script src="scripts/directives/playerScore.js"></script>
     <!-- endbuild -->
 
   </body>
