--- a/public.k33g/index.tmp.html
+++ b/public.k33g/index.tmp.html
@@ -6,26 +6,10 @@
     <!-- === TWITTER BOOTSTRAP === -->
     <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="bootstrap/css/bootstrap-responsive.min.css">
+    <link rel="stylesheet" href="bootstrap/css/font-awesome.min.css">
 
 </head>
 <body style="visibility:hidden">
-
-    <!-- Begin page content -->
-    <div class="container">
-        <div class="page-header">
-            <h1>Alpes-JUG JS-Battle</h1>
-        </div>
-
-        <div id="players" class="row-fluid"></div>
-    </div>
-
-
-
-
-
-
-
-
 
 <!-- === BACKBONE === -->
 <script src="js/vendors/jquery-1.9.1.min.js"></script>
@@ -36,7 +20,6 @@
 <script src="bootstrap/js/bootstrap.min.js"></script>
 
 <!-- === Application === -->
-<script src="js/tools.js"></script>
 <script src="js/app.js"></script>
 
 <script></script>
