--- a/public.sebmade/app/index.html
+++ b/public.sebmade/app/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="styles/bootstrap.css">
     <link rel="stylesheet" href="styles/main.css">
   </head>
-  <body ng-app="public.sebmadeApp" ng-controller="MainCtrl">
+  <body ng-app="public.sebmadeApp">
 
   <div class="navbar navbar-fixed-top">
       <div class="navbar-inner">
@@ -37,6 +37,7 @@
     <script src="scripts/app.js"></script>
     <script src="scripts/controllers/main.js"></script>
     <script src="scripts/directives/playerScore.js"></script>
+    <script src="scripts/controllers/player.js"></script>
     <!-- endbuild -->
 
   </body>
