--- a/public/index.html
+++ b/public/index.html
@@ -5,13 +5,8 @@
     <meta charset="utf-8">
 </head>
 <body>
+    <h1>nothing ...</h1>
 
-<script src="js/vendors/jquery-1.9.1.min.js"></script>
-
-<script>
-
-</script>
-
-
+    <script src="js/vendors/jquery-1.9.1.min.js"></script>
 </body>
 </html>
