--- a/public.k33g/index.html
+++ b/public.k33g/index.html
@@ -17,6 +17,10 @@
         </div>
 
         <div id="players" class="row-fluid"></div>
+
+        <h2>Fights</h2> <hr>
+
+        <div id="fights" class="row-fluid"></div>
     </div>
 
 
