--- a/public.k33g/index.html
+++ b/public.k33g/index.html
@@ -18,6 +18,7 @@
 
         <div id="players" class="row-fluid"></div>
         <div id="fights" class="row-fluid"></div>
+        <div id="scores" class="row-fluid"></div>
     </div>
 
 
