--- a/public.sebmade/app/index.html
+++ b/public.sebmade/app/index.html
@@ -1,14 +1,5 @@
 <!doctype html>
-<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
-<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
-<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
   <head>
-    <meta charset="utf-8"/>
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
-    <title></title>
-    <meta name="description" content="">
-    <meta name="viewport" content="width=device-width">
     <link rel="stylesheet" href="styles/bootstrap.css">
     <link rel="stylesheet" href="styles/main.css">
   </head>
@@ -18,13 +9,6 @@
       <div class="navbar-inner">
           <div class="container">
               <a class="brand" href="#">JsBattle</a>
-              <div class="navbar-content">
-                  <ul class="nav  pull-right">
-                      <li class="active">
-                          <a href="#">Ring</a>
-                      </li>
-                  </ul>
-              </div>
           </div>
       </div>
   </div>
@@ -38,6 +22,7 @@
     <script src="scripts/controllers/main.js"></script>
     <script src="scripts/directives/playerScore.js"></script>
     <script src="scripts/controllers/player.js"></script>
+    <script src="scripts/services/api.js"></script>
     <!-- endbuild -->
 
   </body>
