--- a/public.sebmade/app/index.html
+++ b/public.sebmade/app/index.html
@@ -3,7 +3,7 @@
     <link rel="stylesheet" href="styles/bootstrap.css">
     <link rel="stylesheet" href="styles/main.css">
   </head>
-  <body>
+  <body ng-app="public.sebmadeApp">
 
   <div class="navbar navbar-fixed-top">
       <div class="navbar-inner">
@@ -12,13 +12,16 @@
           </div>
       </div>
   </div>
-  <div class="container"></div>
+  <div class="container" ng-view></div>
 
     <script src="components/underscore/underscore.js"></script>
     <script src="components/angular/angular.js"></script>
 
     <!-- build:js scripts/scripts.js -->
     <script src="scripts/app.js"></script>
+    <script src="scripts/controllers/Main.js"></script>
+    <script src="scripts/services/api.js"></script>
+    <script src="scripts/controllers/Player.js"></script>
     <!-- endbuild -->
 
   </body>
