--- a/public.k33g/index.html
+++ b/public.k33g/index.html
@@ -16,9 +16,11 @@
             <h2>Alpes-JUG JS-Battle</h2>
         </div>
 
-        <div id="players" class="row-fluid"></div>
-        <div id="fights" class="row-fluid"></div>
-        <div id="scores" class="row-fluid"></div>
+        <!-- Components -->
+        <!-- players -->
+        <div name="players" class="row-fluid"></div>
+        <!-- fights -->
+        <div name="fights" class="row-fluid"></div>
     </div>
 
 
@@ -34,6 +36,9 @@
 <!-- === Application === -->
 <script src="js/tools.js"></script>
 <script src="js/app.js"></script>
+<script src="js/models.js"></script>
+<script src="js/views.js"></script>
+<script src="js/main.js"></script>
 
 <script></script>
 </body>
