--- a/public.sebmade/app/index.html
+++ b/public.sebmade/app/index.html
@@ -22,6 +22,7 @@
     <script src="scripts/controllers/Main.js"></script>
     <script src="scripts/services/api.js"></script>
     <script src="scripts/controllers/Player.js"></script>
+    <script src="scripts/directives/playerScore.js"></script>
     <!-- endbuild -->
 
   </body>
