--- a/public.tchak/index.html
+++ b/public.tchak/index.html
@@ -21,6 +21,7 @@
     <script src="vendor/templates.js"></script>
 
     <script src="app/main.js"></script>
+    <script src="app/adapter.js"></script>
     <script src="app/store.js"></script>
     <script src="app/models.js"></script>
   </body>
