change bootstrap theme

--- a/public.tchak/index.html
+++ b/public.tchak/index.html
@@ -6,11 +6,10 @@
   <head>
     <meta charset="utf-8"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
-    <title></title>
-    <meta name="description" content="">
+    <title>JsBattle</title>
     <meta name="viewport" content="width=device-width">
     <link rel="stylesheet" href="vendor/bootstrap.css">
-    <link rel="stylesheet" href="vendor/main.css">
+    <link rel="stylesheet" href="app/css/main.css">
   </head>
 
   <body>
@@ -20,9 +19,9 @@
     <script src="vendor/ember-data.js"></script>
     <script src="vendor/templates.js"></script>
 
-    <script src="app/main.js"></script>
-    <script src="app/adapter.js"></script>
-    <script src="app/store.js"></script>
-    <script src="app/models.js"></script>
+    <script src="app/js/main.js"></script>
+    <script src="app/js/adapter.js"></script>
+    <script src="app/js/store.js"></script>
+    <script src="app/js/models.js"></script>
   </body>
 </html>
