--- a/public.k33g/index.html
+++ b/public.k33g/index.html
@@ -17,6 +17,10 @@
         </div>
 
         <!-- Components -->
+        <!-- players -->
+        <div name="players" class="row-fluid"></div>
+        <!-- fights -->
+        <div name="fights" class="row-fluid"></div>
 
     </div>
 
